--- a/index.html
+++ b/index.html
@@ -11,5 +11,118 @@
 </head>
 <body>
     
+    <div class="container">
+        <!-- first row -->
+        <div class="row">
+            <div class="col-xs-1">
+                <h3>1 col</h3>
+            </div>
+            <div class="col-xs-1">
+                <h3>1 col</h3>
+            </div>
+            <div class="col-xs-1">
+                <h3>1 col</h3>
+            </div>
+            <div class="col-xs-1">
+                <h3>1 col</h3>
+            </div>
+            <div class="col-xs-1">
+                <h3>1 col</h3>
+            </div>
+            <div class="col-xs-1">
+                <h3>1 col</h3>
+            </div>
+            <div class="col-xs-1">
+                <h3>1 col</h3>
+            </div>
+            <div class="col-xs-1">
+                <h3>1 col</h3>
+            </div>
+            <div class="col-xs-1">
+                <h3>1 col</h3>
+            </div>
+            <div class="col-xs-1">
+                <h3>1 col</h3>
+            </div>
+            <div class="col-xs-1">
+                <h3>1 col</h3>
+            </div>
+            <div class="col-xs-1">
+                <h3>1 col</h3>
+            </div>
+        </div>
+
+        <!-- second row -->
+        <div class="row">
+            <div class="col-xs-2">
+                <h3>2 col</h3>
+            </div>
+            <div class="col-xs-5">
+                <h3>5 col</h3>
+            </div>
+            <div class="col-xs-5">
+                <h3>5 col</h3>
+            </div>
+        </div>
+
+        <!-- third row -->
+        <div class="row">
+            <div class="col-xs-12">
+                <h3>12 col</h3>
+            </div>
+        </div>
+
+        <!-- fourth row -->
+        <div class="row">
+            <div class="col-xs-8">
+                <h3>8 col</h3>
+            </div><div class="col-xs-2">
+                <h3>2 col</h3>
+            </div>
+            <div class="col-xs-2">
+                <h3>2 col</h3>
+            </div>
+        </div>
+
+        <!-- fifth row -->
+        <div class="row">
+            <div class="col-xs-1">
+                <h3>1 col</h3>
+            </div><div class="col-xs-2">
+                <h3>2 col</h3>
+            </div>
+            <div class="col-xs-2">
+                <h3>2 col</h3>
+            </div>
+            <div class="col-xs-6">
+                <h3>6 col</h3>
+            </div>
+            <div class="col-xs-1">
+                <h3>1 col</h3>
+            </div>
+        </div>
+
+        <!-- sixth row -->
+        <div class="row">
+            <div class="col-xs-6">
+                <div class="row">
+                    <div class="green col-xs-2"><h3>Nested 2 col</h3></div>
+                    <div class="green col-xs-2"><h3>Nested 2 col</h3></div>
+                    <div class="green col-xs-8"><h3>Nested 8 col</h3></div>
+                </div>
+            </div>
+            <div class="col-xs-6">
+                <div class="row">
+                    <div class="green col-xs-6"><h3>Nested 6 col</h3></div>
+                    <div class="green col-xs-6"><h3>Nested 6 col</h3></div>
+                </div>
+            </div>
+        </div>
+
+        <!-- seventh row -->
+        <div class="row"></div>
+
+    </div>
+
 </body>
 </html>
