--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     
     <div class="container">
-        <!-- first row -->
+        <!-- one row -->
         <div class="row">
             <div class="col-xs-1">
                 <h3>1 col</h3>
@@ -52,7 +52,7 @@
             </div>
         </div>
 
-        <!-- second row -->
+        <!-- two row -->
         <div class="row">
             <div class="col-xs-2">
                 <h3>2 col</h3>
@@ -65,14 +65,14 @@
             </div>
         </div>
 
-        <!-- third row -->
+        <!-- three row -->
         <div class="row">
             <div class="col-xs-12">
                 <h3>12 col</h3>
             </div>
         </div>
 
-        <!-- fourth row -->
+        <!-- four row -->
         <div class="row">
             <div class="col-xs-8">
                 <h3>8 col</h3>
@@ -84,7 +84,7 @@
             </div>
         </div>
 
-        <!-- fifth row -->
+        <!-- five row -->
         <div class="row">
             <div class="col-xs-1">
                 <h3>1 col</h3>
@@ -102,7 +102,7 @@
             </div>
         </div>
 
-        <!-- sixth row -->
+        <!-- six row -->
         <div class="row">
             <div class="col-xs-6">
                 <div class="row">
@@ -119,8 +119,93 @@
             </div>
         </div>
 
-        <!-- seventh row -->
-        <div class="row"></div>
+        <!-- seven row -->
+        <div class="row">
+            <div class="col-xs-12"></div>
+        </div>
+
+        <!-- eight row-->
+        <div class="row">
+            <div class="col-xs-1"></div>
+            <div class="col-xs-11"></div>
+        </div>
+
+        <!-- nine row -->
+        <div class="row">
+            <div class="col-xs-2"></div>
+            <div class="col-xs-10"></div>
+        </div>
+
+        <!-- ten row -->
+        <div class="row">
+            <div class="col-xs-3"></div>
+            <div class="col-xs-9"></div>
+        </div>
+
+        <!-- eleven row -->
+        <div class="row">
+            <div class="col-xs-4"></div>
+            <div class="col-xs-8"></div>
+        </div>
+
+        <!-- twelve row -->
+        <div class="row">
+            <div class="col-xs-5"></div>
+            <div class="col-xs-7"></div>
+        </div>
+
+        <!-- thirteen row -->
+        <div class="row">
+            <div class="col-xs-6"></div>
+            <div class="col-xs-6"></div>
+        </div>
+
+        <span><h1>Offset</h1></span>
+
+        <!-- Offset row -->
+        <div class="row">
+            <div class="col-xs-1 col-xs-offset-11"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-2 col-xs-offset-10"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-3 col-xs-offset-9"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-4 col-xs-offset-8"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-5 col-xs-offset-7"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-6 col-xs-offset-6"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-7 col-xs-offset-5"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-8 col-xs-offset-4"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-9 col-xs-offset-3"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-10 col-xs-offset-2"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-11 col-xs-offset-1"></div>
+        </div>
 
     </div>
 
